syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// Interface exported by the server.
service Greeter {
  // Registers a new client certificate
  // rpc Register (RegisterRequest) returns (StatusReply) {}
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Pairing {
  // Registers a new client certificate
  rpc Register (RegisterRequest) returns (StatusReply) {}
}

message RegisterRequest {
  string name = 1;
}

message StatusReply {
  uint32 status = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  CalenderDay birth = 2;
}

message CalenderDay {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
